--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Ultimate UI"
+			title="Smart Chat"
 			href="/opensearch.xml"
 		/>
 		<script>
@@ -49,7 +49,7 @@
 			})();
 		</script>
 
-		<title>Ultimate UI</title>
+		<title>Smart Chat</title>
 
 		%sveltekit.head%
 	</head>
